# rust_wmessage

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yml
migrations/2022-10-24-210046_initial-schema/: down.sql  up.sql
src/: config.rs  error.rs  lib.rs  main.rs  schema.rs
src/app/: mod.rs
src/app/handlers/: apikey.rs  mod.rs  registrations.rs
src/app/routes/: apikey.rs  apikey_routes.rs  channel_routes.rs  channels.rs  connection_routes.rs  connections.rs  events.rs  health.rs  health_routes.rs  message_routes.rs  mod.rs  plugins.rs  registration_routes.rs  registrations.rs  workspace_routes.rs
src/commons/: config.rs  database.rs  encrypt.rs  error.rs  id.rs  json.rs  json_schema.rs  mod.rs  rest.rs  types.rs  validators.rs
src/commons/rest/: entity.rs  link.rs  mod.rs
src/handlers/: channels.rs  mod.rs  registration.rs  registrations.rs
src/models/: apikey.rs  channel.rs  health.rs  message.rs  message_type.rs  message_type_version.rs  mod.rs  password.rs  user.rs  workspace.rs
src/plugins/: mod.rs
src/plugins/smtp/: mod.rs
src/repository/: apikey_repo.rs  channel_repo.rs  message_type_version_repo.rs  mod.rs  password_repo.rs  user_repo.rs  workspace_repo.rs
src/resources/: apikeys.rs  channels.rs  connections.rs  healths.rs  message_types.rs  messages.rs  mod.rs  registrations.rs  workspaces.rs
src/service/: mod.rs
src/services/: crypto.rs  mod.rs  registration.rs
tests/: integration_test.rs
tests/common/: mod.rs  seed.rs
tests/fixtures/: workspace.rs
tests/mock/: mod.rs
tests/models/: mod.rs  password_it.rs  workspace_it.rs  workspace_test.rs
