[package]
name = "wmessage"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
env_logger = "0.9"
log = "0.4"
derive_more = "0.99"
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono"] }
r2d2 = "0.8.10"
uuid = { version = "1", features = ["v4", "serde"] }
config = "0.13"
argon2 = "0.4"
actix-utils = "3"
chrono = {version = "0.4", features=["serde"]}
bcrypt = "0.13"