[package]
edition = "2021"
name = "wmessage"
version = "0.1.0"

[dependencies]
actix-utils = "3"
actix-web = "4"
argon2 = "0.4"
bcrypt = "0.13"
chrono = {version = "0.4", features = ["serde"]}
config = "0.13"
derive_more = "0.99"
diesel = {version = "2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"]}
dotenv = "0.15"
dyn-clone = "1"
env_logger = "0.9"
log = "0.4"
r2d2 = "0.8.10"
rand = "0.8"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
uuid = {version = "1", features = ["v4", "serde"]}

anyhow = "1"
thiserror = "1"

#tracing-actix-web = "0.6"
#tracing = {version= "0.1", features=["log"]}

actix-web-validator = "5"
validator = {version = "0.16", features = ["derive"]}

diesel_migrations = "2"
handlebars = "4"
lettre = "0.10"
mockall = "0.11"
